--- a/src/language/fr-FR/fr-FR.profiler.ini
+++ b/src/language/fr-FR/fr-FR.profiler.ini
@@ -5,53 +5,6 @@ DEBUG_CALL_STACK_FILE_AND_LINE="Fichier et numéro de ligne"
 DEBUG_CALL_STACK_SAME_FILE="<em>Même appel que celui de la ligne ci-dessous.</em>"
 DEBUG_ERRORS="Erreurs"
 DEBUG_EXPLAIN="Explication"
-DEBUG_FIELD_ALLOWED_GROUPS_DESC="Sélectionnez les groupes autorisés à voir les informations de débogage.<br />Si aucun n'est sélectionné, tous les groupes auront accès à ces informations."
-DEBUG_FIELD_ALLOWED_GROUPS_LABEL="Groupes autorisés"
-DEBUG_FIELD_EXECUTEDSQL_DESC="Si cette option est activée, les requêtes SQL exécutées seront journalisées. N'utiliser ce paramètre que pour de courtes périodes de temps et à des fins d'analyse comparative."
-DEBUG_FIELD_EXECUTEDSQL_LABEL="Journaliser les requêtes SQL exécutées"
-DEBUG_FIELD_LANGUAGE_ERRORFILES_DESC="Afficher la liste des fichiers de langue qui ne sont pas en concordance avec les normes de spécification des fichiers 'ini' de Joomla!"
-DEBUG_FIELD_LANGUAGE_ERRORFILES_LABEL="Afficher les erreurs"
-DEBUG_FIELD_LANGUAGE_FILES_DESC="Afficher la liste des fichiers de langue que Joomla! a tenté de charger."
-DEBUG_FIELD_LANGUAGE_FILES_LABEL="Afficher les fichiers"
-DEBUG_FIELD_LANGUAGE_STRING_DESC="Afficher la liste des chaînes de langue non traduites."
-DEBUG_FIELD_LANGUAGE_STRING_LABEL="Chaînes non traduites"
-DEBUG_FIELD_LOGS_DESC="Afficher la liste des messages journalisés."
-DEBUG_FIELD_LOGS_LABEL="Entrées journalisées"
-DEBUG_FIELD_LOG_CATEGORIES_DESC="Liste des catégories à inclure dans le journal (log). Le journal commun inclut les catégories mais n'est pas limité à : database, databasequery, deprecated, et jerror. Si le champ est laissé vide, toutes les catégories seront affichés."
-DEBUG_FIELD_LOG_CATEGORIES_LABEL="Journal des catégories"
-DEBUG_FIELD_LOG_CATEGORY_MODE_DESC="Sélectionnez si les catégories listées doivent être inclues ou exclues."
-DEBUG_FIELD_LOG_CATEGORY_MODE_EXCLUDE="Exclure"
-DEBUG_FIELD_LOG_CATEGORY_MODE_INCLUDE="Inclure"
-DEBUG_FIELD_LOG_CATEGORY_MODE_LABEL="Mode Journal des catégories"
-DEBUG_FIELD_LOG_DEPRECATED_DESC="Si activé, le journal (log) de l'API définit comme déprécié sera executé. N'utiliser cette fonction que pour de courtes périodes à fin de mettre à jour votre code"
-DEBUG_FIELD_LOG_DEPRECATED_LABEL="Journal déprécié de l'API"
-DEBUG_FIELD_LOG_EVERYTHING_DESC="Si activé, tous les messages de log produits par Joomla! seront loggés sauf les API obsolètes et les requêtes de base de donnée. N'utiliser que pour de courtes périodes de temps afin de débogger."
-DEBUG_FIELD_LOG_EVERYTHING_LABEL="Logger presque tout"
-DEBUG_FIELD_LOG_PRIORITIES_ALERT="Alerte"
-DEBUG_FIELD_LOG_PRIORITIES_ALL="Tous"
-DEBUG_FIELD_LOG_PRIORITIES_CRITICAL="Critique"
-DEBUG_FIELD_LOG_PRIORITIES_DEBUG="Débogage"
-DEBUG_FIELD_LOG_PRIORITIES_DESC="Sélectionnez le niveau de priorité des entrées du journal."
-DEBUG_FIELD_LOG_PRIORITIES_EMERGENCY="Urgence"
-DEBUG_FIELD_LOG_PRIORITIES_ERROR="Erreur"
-DEBUG_FIELD_LOG_PRIORITIES_INFO="Info"
-DEBUG_FIELD_LOG_PRIORITIES_LABEL="Priorités du journal"
-DEBUG_FIELD_LOG_PRIORITIES_NOTICE="Remarque"
-DEBUG_FIELD_LOG_PRIORITIES_WARNING="Avertissement"
-DEBUG_FIELD_MEMORY_DESC="Afficher le total de la mémoire utilisée pour afficher la page."
-DEBUG_FIELD_MEMORY_LABEL="Utilisation de la mémoire"
-DEBUG_FIELD_PROFILING_DESC="Afficher les éléments du profil."
-DEBUG_FIELD_PROFILING_LABEL="Afficher le profil"
-DEBUG_FIELD_QUERIES_DESC="Afficher la liste des requêtes exécutées pour afficher la page."
-DEBUG_FIELD_QUERIES_LABEL="Afficher les requêtes"
-DEBUG_FIELD_QUERY_TYPES_DESC="Afficher une liste des types uniques de requêtes et leur nombre d'occurrences pour la page actuelle. Permet de déceler les requêtes redondantes ou qui pourraient être regroupées en une seule."
-DEBUG_FIELD_QUERY_TYPES_LABEL="Types de requêtes"
-DEBUG_FIELD_STRIP_FIRST_DESC="Toujours exclure le premier mot (suffixe) d'une chaîne."
-DEBUG_FIELD_STRIP_FIRST_LABEL="Exclure le premier mot"
-DEBUG_FIELD_STRIP_PREFIX_DESC="Exclure plusieurs mots (suffixes) depuis le début de la chaîne.<br />Pour exclure plusieurs mots, utilisez ce format: (mot1\|mot2)"
-DEBUG_FIELD_STRIP_PREFIX_LABEL="Exclure plusieurs mots depuis le début"
-DEBUG_FIELD_STRIP_SUFFIX_DESC="Exclure plusieurs mots (suffixes) depuis la fin de la chaîne.<br />Pour exclure plusieurs mots, utilisez ce format: (mot1\|mot2)"
-DEBUG_FIELD_STRIP_SUFFIX_LABEL="Exclure plusieurs mots depuis la fin"
 DEBUG_LANGUAGE_FIELDSET_LABEL="Paramètres de langue"
 DEBUG_LANGUAGE_FILES_IN_ERROR="Erreurs d'analyse dans les fichiers de langue"
 DEBUG_LANGUAGE_FILES_LOADED="Fichiers de langue chargés"
@@ -86,7 +39,7 @@ DEBUG_ROWS_RETURNED_BY_QUERY="Rangées retournées : %s"
 DEBUG_SELECT_QUERIES="Tables sélectionnées :"
 DEBUG_SESSION="Session"
 DEBUG_TIME="Temps"
-DEBUG_TITLE="Console de débogage Joomla!"
+DEBUG_TITLE="Console de débogage"
 DEBUG_UNKNOWN_FILE="Fichier inconnu"
 DEBUG_UNTRANSLATED_STRINGS="Chaînes non traduites"
 DEBUG_WARNING_NO_INDEX="INDEX N'A PU ÊTRE UTILISÉ"
