--- a/src/language/fr-FR/fr-FR.profiler.ini
+++ b/src/language/fr-FR/fr-FR.profiler.ini
@@ -46,3 +46,4 @@ DEBUG_WARNING_NO_INDEX="INDEX N'A PU ÊTRE UTILISÉ"
 DEBUG_WARNING_NO_INDEX_DESC="Cette table a probablement un index manquant sur les colonnes de comparaisons d'égalité sur les WHERE et/ou les colonnes des JOIN ON, ou cette requête est écrite d'une manière où les indexes ne peuvent pas être utilisés, ce qui provoque un parcours complet de la table onéreux en temps."
 DEBUG_WARNING_USING_FILESORT="Utilisation du tri complet de type filesort"
 DEBUG_WARNING_USING_FILESORT_DESC="Cette table a probablement un index manquant sur les colonnes de comparaisons d'égalité des WHERE qui devrait se terminer par les colonnes des ORDER BY, ou cette requête est écrite d'une manière où les indexes ne peuvent pas être utilisés, ce qui provoque un tri complet de type filesort onéreux en temps."
+DEBUG_NO_QUERIES="Aucune requête journalisée"
